--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ plugins {
 	id "java"
 	id "org.springframework.boot" version "2.1.3.RELEASE"
 	id "io.spring.dependency-management" version "1.0.7.RELEASE"
-//	id "org.jetbrains.intellij" version "0.4.4"
 }
 
 group = 'au.com.voicestreams'
@@ -15,6 +14,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-aop')
+	compile('org.springframework.cloud:spring-cloud-cloudfoundry-connector:2.0.2.RELEASE')
 	compile('io.micrometer:micrometer-registry-datadog')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
