--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,6 @@
 ---
 applications:
-- name: spinnaker-test-app
-  memory: 1GB
-  instances: 1
-  path: build/libs/spring-customer-app-0.0.1-SNAPSHOT.jar
-
+  - name: spinnaker-test-app
+    memory: 1GB
+    instances: 1
+    path: target/pickup-prediction-service-1.0.0-rc1.jar
