--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
   - name: spinnaker-test-app
-    memory: 1GB
+    memory: 1G
     instances: 1
     path: target/pickup-prediction-service-1.0.0-rc1.jar
