--- a/ci/pipeline-spinnaker.yml
+++ b/ci/pipeline-spinnaker.yml
@@ -1,19 +1,19 @@
 ---
-resource_types:
-  - name: artifactory-resource
-    type: docker-image
-    source:
-      repository: springio/artifactory-resource
-      tag: 0.0.10
+#resource_types:
+#  - name: artifactory-resource
+#    type: docker-image
+#    source:
+#      repository: springio/artifactory-resource
+#      tag: 0.0.10
 
 resources:
-  - name: artifacts
-    type: artifactory-resource
-    source:
-      uri: http://artifactory.kingslanding.pks.lab.winterfell.live/artifactory
-      username: admin
-      password: KeepItSimple1!
-      build_name: pickup-prediction-service-ci
+#  - name: artifacts
+#    type: artifactory-resource
+#    source:
+#      uri: http://artifactory.kingslanding.pks.lab.winterfell.live/artifactory
+#      username: admin
+#      password: ((artifactory-password))
+#      build_name: pickup-prediction-service
 
   - name: code-repo
     type: git
@@ -65,10 +65,10 @@ jobs:
       - task: build-and-publish
         file: ci-scripts/ci/tasks/build-and-publish.yml
         params:
-          REPO_WITH_BINARIES_FOR_UPLOAD: ((repo-with-binaries-for-upload))
-          M2_SETTINGS_REPO_ID: ((m2-settings-repo-id))
+          REPO_CONTEXT_URL: ((repo-context-url))
           M2_SETTINGS_REPO_USERNAME: ((m2-settings-repo-username))
           M2_SETTINGS_REPO_PASSWORD: ((m2-settings-repo-password))
+          BUILD_URI: "https://ci.lab.winterfell.live/teams/${BUILD_TEAM_NAME}/pipelines/${BUILD_PIPELINE_NAME}"
       - put: version
         params: { file: version/version }
       - put: code-repo-tag
@@ -77,15 +77,15 @@ jobs:
           repository: code-repo
           tag: results/tag.txt
           only_tag: true
-      - put: artifacts
-        params:
-          repo: libs-snapshot-local
-          build_number: "example-${BUILD_ID}"
-          folder: results/repository
-          include:
-            - "/io/pivotal/pickup-prediction-service/**/*.jar"
-            - "/io/pivotal/pickup-prediction-service/**/*.pom"
-          build_uri: "https://ci.lab.winterfell.live/teams/${BUILD_TEAM_NAME}/pipelines/${BUILD_PIPELINE_NAME}"
+#      - put: artifacts
+#        params:
+#          repo: libs-snapshot-local
+#          build_number: "${BUILD_ID}"
+#          folder: results/repository
+#          include:
+#            - "/live/winterfell/pickup-prediction-service/**/*.jar"
+#            - "/live/winterfell/pickup-prediction-service/**/*.pom"
+#          build_uri: "https://ci.lab.winterfell.live/teams/${BUILD_TEAM_NAME}/pipelines/${BUILD_PIPELINE_NAME}"
 
   - name: trigger-spinnaker
     serial: true
