--- a/ci/tasks/build-and-publish.yml
+++ b/ci/tasks/build-and-publish.yml
@@ -8,8 +8,8 @@ image_resource:
     tag: latest
 
 params:
-  - REPO_WITH_BINARIES_FOR_UPLOAD:
-  - M2_SETTINGS_REPO_ID:
+  - REPO_CONTEXT_URL:
+  - BUILD_URI:
   - M2_SETTINGS_REPO_USERNAME:
   - M2_SETTINGS_REPO_PASSWORD:
 
