--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
             <plugin>
                 <groupId>org.jfrog.buildinfo</groupId>
                 <artifactId>artifactory-maven-plugin</artifactId>
-                <version>2.6.1</version>
+                <version>2.7.0</version>
                 <inherited>false</inherited>
                 <executions>
                     <execution>
@@ -113,8 +113,7 @@
                             </publisher>
                             <buildInfo>
                                 <buildNumber>{{BUILD_ID}}</buildNumber>
-                                <buildUri>{{BUILD_URI}}</buildUri>
-
+                                <buildUrl>{{BUILD_URI}}</buildUrl>
                             </buildInfo>
                         </configuration>
                     </execution>
