--- a/ci/pipeline-spinnaker.yml
+++ b/ci/pipeline-spinnaker.yml
@@ -68,7 +68,7 @@ jobs:
           REPO_CONTEXT_URL: ((repo-context-url))
           M2_SETTINGS_REPO_USERNAME: ((m2-settings-repo-username))
           M2_SETTINGS_REPO_PASSWORD: ((m2-settings-repo-password))
-          BUILD_URI: "https://ci.lab.winterfell.live/teams/${BUILD_TEAM_NAME}/pipelines/${BUILD_PIPELINE_NAME}"
+          BUILD_URI: ((concourse-uri))/teams/${BUILD_TEAM_NAME}/pipelines/${BUILD_PIPELINE_NAME}
       - put: version
         params: { file: version/version }
       - put: code-repo-tag
