--- a/ci/pipeline-spinnaker.yml
+++ b/ci/pipeline-spinnaker.yml
@@ -1,19 +1,13 @@
 ---
-#resource_types:
-#  - name: artifactory-resource
-#    type: docker-image
-#    source:
-#      repository: springio/artifactory-resource
-#      tag: 0.0.10
+resource_types:
+  - name: meta
+    type: docker-image
+    source:
+      repository: swce/metadata-resource
 
 resources:
-#  - name: artifacts
-#    type: artifactory-resource
-#    source:
-#      uri: http://artifactory.kingslanding.pks.lab.winterfell.live/artifactory
-#      username: admin
-#      password: ((artifactory-password))
-#      build_name: pickup-prediction-service
+  - name: meta
+    type: meta
 
   - name: code-repo
     type: git
@@ -43,7 +37,6 @@ resources:
       file: version
       private_key: ((code-repo-private-key))
 
-
 jobs:
   - name: unit-test
     plan:
@@ -62,6 +55,7 @@ jobs:
       - get: ci-scripts
       - get: version
         params: { pre: rc }
+      - get: meta
       - task: build-and-publish
         file: ci-scripts/ci/tasks/build-and-publish.yml
         params:
