--- a/ci/spinnaker/e2e-job.yml
+++ b/ci/spinnaker/e2e-job.yml
@@ -14,7 +14,7 @@ spec:
               set -ex;
               git clone http://github.com/doddatpivotal/pickup-prediction-service.git code-repo;
               cd code-repo;
-              git checkout ${parameters.tag}
+              git checkout ${parameters.tag};
               APPLICATION_URL="https://pickup-prediction.cfapps.io" MANAGEMENT_METRICS_EXPORT_DATADOG_ENABLED=false ./mvnw clean verify -Pe2e
           command:
             - /bin/sh
