--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1,5 +1,15 @@
 ---
+resource_types:
+  - name: meta
+    type: docker-image
+    source:
+      repository: swce/metadata-resource
+
 resources:
+
+  - name: meta
+    type: meta
+
   - name: code-repo
     type: git
     source:
@@ -71,11 +81,11 @@ jobs:
       - get: ci-scripts
       - get: version
         params: { pre: rc }
+      - get: meta
       - task: build-and-publish
         file: ci-scripts/ci/tasks/build-and-publish.yml
         params:
-          REPO_WITH_BINARIES_FOR_UPLOAD: ((repo-with-binaries-for-upload))
-          M2_SETTINGS_REPO_ID: ((m2-settings-repo-id))
+          REPO_CONTEXT_URL: ((repo-context-url))
           M2_SETTINGS_REPO_USERNAME: ((m2-settings-repo-username))
           M2_SETTINGS_REPO_PASSWORD: ((m2-settings-repo-password))
       - put: version
@@ -101,7 +111,7 @@ jobs:
           GROUP_ID: ((code-repo-group-id))
           ARTIFACT_ID: ((code-repo-artifact-id))
           ROUTE: ((cf-test-route))
-          ARTIFACTORY_URL: ((repo-with-binaries-for-upload))
+          ARTIFACTORY_URL: ((repo-context-url))/((artifactory-repo))
           DEPLOY_TARGET_LABEL: test
       - put: cf-test
         params:
@@ -120,14 +130,11 @@ jobs:
         passed: [ deploy-to-test ]
       - get: ci-scripts
       - get: version
-        params: { bump: final }
+      - get: meta
       - task: prepare-release
         file: ci-scripts/ci/tasks/prepare-release.yml
-      - task: build-and-publish
-        file: ci-scripts/ci/tasks/build-and-publish.yml
         params:
-          REPO_WITH_BINARIES_FOR_UPLOAD: ((repo-with-binaries-for-upload))
-          M2_SETTINGS_REPO_ID: ((m2-settings-repo-id))
+          REPO_CONTEXT_URL: ((repo-context-url))
           M2_SETTINGS_REPO_USERNAME: ((m2-settings-repo-username))
           M2_SETTINGS_REPO_PASSWORD: ((m2-settings-repo-password))
       - put: version
@@ -168,35 +175,9 @@ jobs:
           GROUP_ID: ((code-repo-group-id))
           ARTIFACT_ID: ((code-repo-artifact-id))
           ROUTE: ((cf-prod-route))
-          ARTIFACTORY_URL: ((repo-with-binaries-for-upload))
+          ARTIFACTORY_URL: ((repo-context-url))/((artifactory-repo))
           DEPLOY_TARGET_LABEL: prod
       - put: cf-prod
-        params:
-          manifest: deployment/manifest.yml
-      - put: code-repo-tag
-        resource: code-repo
-        params:
-          repository: code-repo
-          tag: deployment/tag.txt
-          only_tag: true
-
-  - name: deploy-release-to-test
-    serial: true
-    plan:
-      - get: code-repo
-        passed: [ mark-as-release ]
-      - get: ci-scripts
-      - get: version
-        passed: [ mark-as-release ]
-      - task: prepare-cf-push
-        file: ci-scripts/ci/tasks/prepare-cf-push.yml
-        params:
-          GROUP_ID: ((code-repo-group-id))
-          ARTIFACT_ID: ((code-repo-artifact-id))
-          ROUTE: ((cf-test-route))
-          ARTIFACTORY_URL: ((repo-with-binaries-for-upload))
-          DEPLOY_TARGET_LABEL: test
-      - put: cf-test
         params:
           manifest: deployment/manifest.yml
       - put: code-repo-tag
