--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,8 +14,4 @@ management:
   metrics:
     export:
       datadog:
-        api-key: ${DATADOG_API_KEY}
-        application-key: ${DATADOG_APPLICATION_KEY}
-        host-tag: ${spring.application.name}
-        step: 10s
-        enabled: true
+        enabled: false
