--- a/manifest.yml
+++ b/manifest.yml
@@ -3,4 +3,4 @@ applications:
   - name: pickup-prediction-service
     memory: 1G
     path: target/pickup-prediction-service-1.0.0-rc1.jar
-    buildpack: java_buildpack_offline
+    buildpack: java_buildpack
