--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -167,6 +167,7 @@ jobs:
     plan:
       - get: code-repo
         passed: [ mark-as-release ]
+        trigger: true
       - get: ci-scripts
       - get: version
         passed: [ mark-as-release ]
